--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=TASK33
-sonar.projectName=TASK__33
+sonar.projectKey=TASK4
+sonar.projectName=TASK____4
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.language=java
